bootstrap/02-policy-as-code/gatekeeper-policy/test-costcenter-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-fail
  namespace: team-policy
spec:
  containers:
    - name: nginx
      image: nginx:alpine
