bootstrap/02-policy-as-code/gatekeeper-policy/test-costcenter-pass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pass
  namespace: team-policy
  labels:
    costcenter: "cc-42"
spec:
  containers:
    - name: nginx
      image: nginx:alpine
