bootstrap/02-policy-as-code/gatekeeper-policy/team-namespace-costcenter-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sTeamCostcenterLabel
metadata:
  name: team-namespaces-must-have-costcenter
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
